--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <ol>
             <li>
                 <p>Avión Comercial</p>
-                <link rel="stylesheet" href="">
+                <img src="" alt="">
             </li>
             <li>
                 <p>Avión de Carga</p>
-                <link rel="stylesheet" href="">
+                <img src="" alt="">
             </li>
             <li>
                 <p>Avión Militar</p>
-                <link rel="stylesheet" href="">
+                <img src="" alt="">
             </li>
         </ol>
     </div>
