--- a/index.html
+++ b/index.html
@@ -6,24 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do_It_Yourself</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/user-astronaut-solid.svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div id="header">
+    <div>
         <h1>Aviones y Compañías</h1>
         <h2>Qué tipo de aviones existen:</h2>
         <ol>
             <li>
                 <p>Avión Comercial</p>
-                <img src="" alt="">
+                <img src="./img/Comercial.jpg" alt="">
             </li>
             <li>
                 <p>Avión de Carga</p>
-                <img src="" alt="">
+                <img src="./img/Carga.jpg" alt="">
             </li>
             <li>
                 <p>Avión Militar</p>
-                <img src="" alt="">
+                <img src="./img/Militar.jpg" alt="">
             </li>
         </ol>
     </div>
@@ -106,15 +111,15 @@
     </div>
     <div>
         <div class="row" id="footer">
-            <p>© Derechos Autorizados, LLC. 2021</p>
+            <h3>© Derechos Autorizados, LLC. 2021</h3>
         </div>
         <div class="column-2">
-            <p>Facebook</p>
-            <p>Twitter</p>
+            <h3>Facebook</h3>
+            <h3>Twitter</h3>
         </div>
         <div class="column-2">
-            <p>Instagram</p>
-            <p>Whatsapp</p>
+            <h3>Instagram</h3>
+            <h3>Whatsapp</h3>
         </div>
     </div>
 </body>
